# verlet_simulator

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  run.sh
src/: main.cpp  orb.cpp  renderer.hpp  thread_pool.hpp
src/physics/: particle.hpp  simulator.hpp
src/utils/: color_utils.hpp  input_handler.hpp
